# escaperoom

./: CMakeLists.txt  README.md  err.h  genFiles.sh  manager.c  player.c  player.h  playerExec.c  storage.c  storage.h
